--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -72,8 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\include;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\include</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\lib\x86;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\lib\x86</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\include;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\include;C:\Users\Nikola\Downloads\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\lib\x86;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\lib\x86;C:\Users\Nikola\Downloads\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -94,7 +94,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
