--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -142,29 +142,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ArcadeGameScene.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Breakout.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="COOPGameScene.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="MainMenuGameScene.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="StoryGameScene.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArcadeGameScene.h" />
     <ClInclude Include="Array2D.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="COOPGameScene.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="MainMenuGameScene.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="StoryGameScene.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
