--- a/Breakout/Breakout/Breakout.vcxproj.filters
+++ b/Breakout/Breakout/Breakout.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="COOPGameScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StoryChapter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
