Cleanup header files, Add documentation, Fix coding style

--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -149,10 +149,12 @@
     <ClCompile Include="COOPGameScene.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="MainMenuGameScene.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="StoryChapter.cpp" />
     <ClCompile Include="StoryGameScene.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
