--- a/Breakout/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout/Breakout.vcxproj
@@ -77,6 +77,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\include;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\include;C:\Users\Nikola\Downloads\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\include;C:\Users\Nikola\Downloads\SDL2_mixer-devel-2.0.4-VC\SDL2_mixer-2.0.4\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Nikola\Downloads\SDL2-devel-2.0.12-VC\SDL2-2.0.12\lib\x86;C:\Users\Nikola\Downloads\SDL2_image-devel-2.0.5-VC\SDL2_image-2.0.5\lib\x86;C:\Users\Nikola\Downloads\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\lib\x86;C:\Users\Nikola\Downloads\SDL2_mixer-devel-2.0.4-VC\SDL2_mixer-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -112,6 +114,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -152,6 +155,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelGenerator.cpp" />
     <ClCompile Include="MainMenuGameScene.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="RectangleGameObject.cpp" />
@@ -168,6 +172,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelGenerator.h" />
     <ClInclude Include="MainMenuGameScene.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
